--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_script:
 script:
   - make docker
   # Test built docker image.
-  - docker run $DHREPO/$BINARY:local -v 2>&1 | grep -Eq "$BINARY v$VERSION"
+  - docker run $DHUSER/$BINARY:local -v 2>&1 | grep -Eq "$BINARY v$VERSION"
   # test and build everything
   - rvm 2.0.0 do make release
 after_success:
