--- a/travis.yml
+++ b/travis.yml
@@ -39,8 +39,9 @@ after_success:
   # Display Release Folder
   - ls -l release/
   - |
+      mkdir $HOME/.ssh
       declare -r SSH_FILE="$(mktemp -u $HOME/.ssh/XXXXX)"
-      echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+      echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> $HOME/.ssh/config
       # Get deploy key for golift/homebrew-mugs.
       openssl aes-256-cbc -K $encrypted_xxxxxxxxxxxx_key -iv $encrypted_yyyyyyyyyyyy_iv -in ".github_deploy_key.enc" -out "$SSH_FILE" -d
       chmod 600 "$SSH_FILE" \
@@ -48,7 +49,7 @@ after_success:
           "Host github.com" \
           "  IdentityFile $SSH_FILE" \
           "  StrictHostKeyChecking no" \
-          "  LogLevel ERROR" >> ~/.ssh/config
+          "  LogLevel ERROR" >> $HOME/.ssh/config
 deploy:
   - provider: releases
     api_key:
