--- a/.travis.yml
+++ b/.travis.yml
@@ -19,38 +19,39 @@ services:
   - docker
 install:
   - mkdir -p $GOPATH/bin
-    # Download the `dep` binary to bin folder in $GOPATH
+  # Download the `dep` binary to bin folder in $GOPATH
   - curl -sLo $GOPATH/bin/dep https://github.com/golang/dep/releases/download/v0.5.3/dep-linux-amd64
   - chmod +x $GOPATH/bin/dep
   # download super-linter: golangci-lint
-  - curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin latest
-  #- curl -sL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin latest
+  - curl -sL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin latest
   - rvm install 2.0.0
   - rvm 2.0.0 do gem install --no-document fpm
 before_script:
   - source .metadata.sh
+  - make vendor
 script:
+  # Test Go and Docker.
   - make test
   - make docker
   # Test built docker image.
-  - docker run $DHUSER/$BINARY:local -v 2>&1 | grep -Eq "$BINARY v$VERSION"
-  # test and build everything
+  - docker run $DHUSER/$BINARY:local -v 2>&1 | grep -Eq "^$BINARY v$VERSION"
+  # Build everything
   - rvm 2.0.0 do make release
 after_success:
   # Display Release Folder
   - ls -l release/
   - |
-      mkdir -p $HOME/.ssh
-      declare -r SSH_FILE="$(mktemp -u $HOME/.ssh/XXXXX)"
-      echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> $HOME/.ssh/config
-      # Get deploy key for golift/homebrew-mugs.
-      openssl aes-256-cbc -K $encrypted_7b76bb9bd599_key -iv $encrypted_7b76bb9bd599_iv -in .github_deploy_key.enc -out "$SSH_FILE" -d
-      chmod 600 "$SSH_FILE" \
-        && printf "%s\n" \
-          "Host github.com" \
-          "  IdentityFile $SSH_FILE" \
-          "  StrictHostKeyChecking no" \
-          "  LogLevel ERROR" >> $HOME/.ssh/config
+    mkdir -p $HOME/.ssh
+    declare -r SSH_FILE="$(mktemp -u $HOME/.ssh/XXXXX)"
+    echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> $HOME/.ssh/config
+    # Get deploy key for golift/homebrew-mugs.
+    openssl aes-256-cbc -K $encrypted_7b76bb9bd599_key -iv $encrypted_7b76bb9bd599_iv -in .github_deploy_key.enc -out "$SSH_FILE" -d
+    chmod 600 "$SSH_FILE" \
+      && printf "%s\n" \
+        "Host github.com" \
+        "  IdentityFile $SSH_FILE" \
+        "  StrictHostKeyChecking no" \
+        "  LogLevel ERROR" >> $HOME/.ssh/config
 deploy:
   - provider: releases
     api_key:
