--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ script:
   - make test
   - make docker
   # Test built docker image.
-  - docker run $DHUSER/$BINARY:local -v 2>&1 | grep -Eq "^$BINARY v$VERSION"
+  - docker run $BINARY -v 2>&1 | grep -Eq "^$BINARY v$VERSION"
   # Build everything
   - rvm 2.0.0 do make release
 after_success:
