--- a/init/systemd/template.unit.service
+++ b/init/systemd/template.unit.service
@@ -1,4 +1,5 @@
 # Systemd service unit for {{BINARY}}.
+# This file is installed when FORMULA is set to 'service'.
 
 [Unit]
 Description={{BINARY}} - {{DESC}}
