--- a/.travis.yml
+++ b/.travis.yml
@@ -48,14 +48,14 @@ after_success:
     mkdir -p $HOME/.ssh
     declare -r SSH_FILE="$(mktemp -u $HOME/.ssh/XXXXX)"
     # You must put github_deploy_file into .secret_files.tar.enc, this is an ssh key added to your homebrew forumla repo.
-    mv github_deploy_key $SSH_FILE
     echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> $HOME/.ssh/config
-    chmod 600 "$SSH_FILE" \
+    [ ! -f github_deploy_key ] || (mv github_deploy_key $SSH_FILE \
+      && chmod 600 "$SSH_FILE" \
       && printf "%s\n" \
         "Host github.com" \
         "  IdentityFile $SSH_FILE" \
         "  StrictHostKeyChecking no" \
-        "  LogLevel ERROR" >> $HOME/.ssh/config
+        "  LogLevel ERROR" >> $HOME/.ssh/config)
 deploy:
   - provider: releases
     api_key:
