clean up comments

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,10 +44,12 @@ script:
 after_success:
   # Display Release Folder
   - ls -l release/
+  # Setup the ssh client so we can clone and push to the homebrew formula repo.
+  # You must put github_deploy_file into .secret_files.tar.enc
+  # This is an ssh key added to your homebrew forumla repo.
   - |
     mkdir -p $HOME/.ssh
     declare -r SSH_FILE="$(mktemp -u $HOME/.ssh/XXXXX)"
-    # You must put github_deploy_file into .secret_files.tar.enc, this is an ssh key added to your homebrew forumla repo.
     echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> $HOME/.ssh/config
     [ ! -f github_deploy_key ] || (mv github_deploy_key $SSH_FILE \
       && chmod 600 "$SSH_FILE" \
