--- a/init/docker/hooks/build
+++ b/init/docker/hooks/build
@@ -28,7 +28,8 @@ for build in $BUILDS; do
     --build-arg "VENDOR=${VENDOR}" \
     --build-arg "AUTHOR=${MAINT}" \
     --build-arg "BINARY=${BINARY}" \
-    --build-arg "GHREPO=${GHREPO}" \
+    --build-arg "IMPORT_PATH=${IMPORT_PATH}" \
+    --build-arg "SOURCE_URL=${SOURCE_URL}" \
     --build-arg "CONFIG_FILE=${CONFIG_FILE}" \
     --tag "${IMAGE_NAME}_${os}_${name}" \
     --file ${DOCKERFILE_PATH} .
