--- a/.travis.yml
+++ b/.travis.yml
@@ -15,25 +15,24 @@ addons:
     - libgnome-keyring-dev
     - fakeroot
     - zip
+    - debsigs
+#    - gnupg
+    - expect
 go:
-  - 1.12.x
+  - 1.15.x
 services:
   - docker
 install:
-  - mkdir -p $GOPATH/bin
-  # Download the `dep` binary to bin folder in $GOPATH
-  - curl -sLo $GOPATH/bin/dep https://github.com/golang/dep/releases/download/v0.5.3/dep-linux-amd64
-  - chmod +x $GOPATH/bin/dep
-  # download super-linter: golangci-lint
-  - curl -sL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin latest
-  - rvm install 2.0.0
-  - rvm 2.0.0 do gem install --no-document fpm
+  - rvm install 2.3.0
+  - rvm 2.3.0 do gem install --no-document fpm
+  - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin latest
 before_script:
   # Create your own deploy key, tar it, and encrypt the file to make this work. Optionally add a bitly_token file to the archive.
   - openssl aes-256-cbc -K $encrypted_e91cbdffc272_key -iv $encrypted_e91cbdffc272_iv -in .secret_files.tar.enc -out .secret_files.tar -d
   - tar -xf .secret_files.tar
+#  - gpg --import gpg.signing.key
+  - rm -f gpg.signing.key .secret-files.tar
   - source .metadata.sh
-  - make vendor
 script:
   # Test Go and Docker.
   - make test
@@ -41,7 +40,7 @@ script:
   # Test built docker image.
   - docker run $BINARY -v 2>&1 | grep -Eq "^$BINARY v$VERSION"
   # Build everything
-  - rvm 2.0.0 do make release
+  - rvm 2.3.0 do make release
 after_success:
   # Display Release Folder
   - ls -l release/
