--- a/init/docker/hooks/build
+++ b/init/docker/hooks/build
@@ -13,7 +13,7 @@ source .metadata.sh
 
 # Build each configured image from Docker Cloud.
 for build in $BUILDS; do
-  # os:name:arch:variant
+  # os:name:arch
   os=$(echo $build | cut -d: -f1)
   name=$(echo $build | cut -d: -f2)
   echo "Building Image ${IMAGE_NAME}_${os}_${name}"
@@ -28,7 +28,6 @@ for build in $BUILDS; do
     --build-arg "VENDOR=${VENDOR}" \
     --build-arg "AUTHOR=${MAINT}" \
     --build-arg "BINARY=${BINARY}" \
-    --build-arg "IMPORT_PATH=${IMPORT_PATH}" \
     --build-arg "SOURCE_URL=${SOURCE_URL}" \
     --build-arg "CONFIG_FILE=${CONFIG_FILE}" \
     --tag "${IMAGE_NAME}_${os}_${name}" \
