--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,10 @@ install:
   - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin latest
 before_script:
   # Create your own deploy key, tar it, and encrypt the file to make this work. Optionally add a bitly_token file to the archive.
-  - openssl aes-256-cbc -K $encrypted_e91cbdffc272_key -iv $encrypted_e91cbdffc272_iv -in .secret_files.tar.enc -out .secret_files.tar -d
+  - openssl aes-256-cbc -K $encrypted_43c29b766863_key -iv $encrypted_43c29b766863_iv -in .secret_files.tar.enc -out .secret_files.tar -d
   - tar -xf .secret_files.tar
 #  - gpg --import gpg.signing.key
-  - rm -f gpg.signing.key .secret-files.tar
+  - rm -f gpg.signing.key .secret_files.tar
   - source .metadata.sh
 script:
   # Test Go and Docker.
