--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ install:
   - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin latest
   - rvm install 2.3.0
   - rvm 2.3.0 do gem install --no-document fpm
-  - rvm pkg install zlib
+  - rvm 2.3.0 pkg install zlib
 before_script:
   # Create your own deploy key, tar it, and encrypt the file to make this work. Optionally add a bitly_token file to the archive.
   - openssl aes-256-cbc -K $encrypted_43c29b766863_key -iv $encrypted_43c29b766863_iv -in .secret_files.tar.enc -out .secret_files.tar -d
