--- a/init/docker/Dockerfile
+++ b/init/docker/Dockerfile
@@ -19,7 +19,8 @@ RUN mkdir -p $GOPATH/pkg/mod $GOPATH/bin $GOPATH/src /${BINARY}
 COPY . /${BINARY}
 WORKDIR /${BINARY}
 
-RUN CGO_ENABLED=0 make ${BINARY}.${ARCH}.${OS}
+RUN apt install upx && \
+    CGO_ENABLED=0 make ${BINARY}.${ARCH}.${OS}
 
 FROM scratch
 ARG ARCH
