--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /hello-world
 
 # The rest is probably fine.
-/rsrc.syso
+/rsrc*.syso
 /*.conf
 /*.gz
 /*.zip
@@ -12,7 +12,7 @@
 /*.txz
 /*.*.arm
 /*.*.exe
-/.*.macos
+/*.*.macos
 /*.*.linux
 /*.*.freebsd
 /*.rb
