--- a/init/docker/Dockerfile
+++ b/init/docker/Dockerfile
@@ -32,7 +32,6 @@ ARG VERSION
 ARG LICENSE=MIT
 ARG BINARY
 ARG SOURCE_URL=http://github.com/golift/application-builder
-ARG URL=http://github.com/golift/application-builder
 ARG DESC=application-builder
 ARG VENDOR=golift
 ARG AUTHOR=golift
@@ -43,7 +42,7 @@ LABEL org.opencontainers.image.created="${BUILD_DATE}" \
       org.opencontainers.image.title="${BINARY}" \
       org.opencontainers.image.documentation="${SOURCE_URL}/wiki/Docker" \
       org.opencontainers.image.description="${DESC}" \
-      org.opencontainers.image.url="${URL}" \
+      org.opencontainers.image.url="${SOURCE_URL}" \
       org.opencontainers.image.revision="${COMMIT}" \
       org.opencontainers.image.source="${SOURCE_URL}" \
       org.opencontainers.image.vendor="${VENDOR}" \
